# RAG-Anything

./: pyproject.toml
docs/: VIDEORAG_INTEGRATION.md
examples/: video_processing_test.py
raganything/: config.py  modalprocessors.py  parser.py  prompt.py  raganything.py  utils.py
scripts/: install_video_deps.sh
